# advent-of-code

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  ADDING_YEARS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  flake.nix  justfile  mypy.ini  pyproject.toml  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.git-crypt/keys/default/0/: 789B8E4F0588615946E4B83A7F1160FAFC739341.gpg
.github/workflows/: aoc_2024.yml
.secrets/: tokens.json
.serena/: project.yml
aoc-runner/: Cargo.toml
aoc-runner-macros/: Cargo.toml
aoc-runner-macros/src/: aggregate.rs  domain.rs  lib.rs  partflag.rs
aoc-runner-macros/src/parser/: caseargs.rs  genargs.rs  macroargs.rs  mod.rs  solutionargs.rs  solverargs.rs
aoc-runner/src/: cli.rs  codegen.rs  commands.rs  lib.rs  main.rs
aoc-runner/src/iodomain/: cargo.rs  credentials.rs  mod.rs
aoc-runner/src/templates/: dayX.rs  year-Cargo.toml  year-gitignore
aoc2021/: Cargo.toml
aoc2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
aoc_2020/: Cargo.toml
aoc_2020/src/: day01.rs  lib.rs  main.rs
aoc_2021/: Cargo.toml
aoc_2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  prelude.rs
aoc_2022/: Cargo.toml
aoc_2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  (+13 more)
aoc_2023/: Cargo.toml
aoc_2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  (+12 more)
aoc_2024/: Cargo.toml
aoc_2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  lib.rs
aoc_lib/: Cargo.toml
aoc_lib/src/: lib.rs
aoc_traits/: Cargo.toml
aoc_traits/src/: days.rs  lib.rs  specialization.rs
common/: Cargo.toml
common/src/: lib.rs  misc.rs  part.rs  registry.rs  solution.rs
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
framework/: Cargo.toml  template.txt
framework/src/: algorithms.rs  aoc_cli.rs  args.rs  day.rs  error.rs  formatter.rs  grid.rs  inputs.rs  lib.rs  lib_old.rs  line.rs  main.rs  ocr.rs  parser.rs  prelude.rs  runner.rs  session.rs  submission.rs  submit.rs  traits.rs  vec.rs  years.rs
framework/src/commands/: download.rs  init.rs  list.rs  mod.rs  run.rs  scaffold.rs  submit.rs  timer.rs  verify.rs
framework/src/parsers/: common.rs  logical.rs  mod.rs  multi.rs  numbers.rs
py_aoc/: cli.py  initialize.py  template_pytest.py
py_aoc/support/: setup.cfg  support.py
py_aoc/year_2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  (+10 more)
src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  initialize.py  lib.rs  main.rs  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
src/advent_of_code/: day01.py  day02.py  day03.py  day04.py  day05.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py
src/aoc_2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
support/: support.py
y2015/: Cargo.toml
y2015/benches/: bench.rs
y2015/src/: lib.rs  main.rs
y2016/: Cargo.toml
y2016/src/: main.rs
y2017/: Cargo.toml
y2017/src/: main.rs
y2018/: Cargo.toml
y2018/src/: main.rs
y2019/: Cargo.toml
y2019/src/: main.rs
y2020/: Cargo.toml
y2020/benches/: bench.rs
y2020/src/: lib.rs  main.rs
y2021/: Cargo.toml
y2021/benches/: bench.rs
y2021/src/: lib.rs  main.rs
y2022/: Cargo.toml
y2022/benches/: bench.rs
y2022/src/: main.rs
