[workspace]
resolver = "2"

members = ["framework", "common", "aoc_*"]
default-members = ["framework"]

[workspace.package]
version = "1.0.0"

[workspace.metadata.crane]
name = "advent-of-code"

[workspace.dependencies]
framework = { path = "./framework" }
common = { path = "./common" }
aoc_lib = { path = "./aoc_lib" }
aoc_2024 = { path = "./aoc_2024" }

ahash = "0.8"
bitvec = "1.0.1"
chrono = "0.4"
clap = { version = "4", features = ["color", "derive"] }
colored = "2.0.0"
criterion = { version = "0.4", features = ["html_reports"] }
divan = "0.1.4"
glam = "0.24.2"
hex = "0.4.3"
humantime = "2.1"
indoc = "2.0"
itertools = "0.10"
lending-iterator = "0.1.7"
miette = { version = "7.1", features = ["fancy"] }
ndarray = "0.15.6"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
once_cell = "1.18"
pathfinding = "4.6.0"
petgraph = "0.6.4"
regex = "1.10"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
rustworkx-core = "0.13.2"
scraper = "0.18"
shellexpand = "3.1"
shell-words = "1.1"
test-log = { version = "0.2.13", default-features = false, features = [
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
which = "7.0"
ureq = "2.9"
url = { version = "2.5", features = ["serde"] }
z3 = { version = "0.12", features = [] }

[profile.release]
debug = true
overflow-checks = true
incremental = true

[profile.dev]
opt-level = 1 # Use slightly better optimizations.
