[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
support = {path = "support", develop = true}
bitarray = "^2.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.11b1"
isort = "^5.10.1"
poethepoet = "^0.11.0"
types-setuptools = "^57.4.4"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
