[tool.poetry]
name = "py_aoc"
version = "1.0.0"
description = "Advent of Code in Python"
authors = ["Brian Ryall"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
support = { path = "support", develop = true }
bitarray = "^2.3.4"
aocd = "^0.1"
z3-solver = "^4.8.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.11b1"
isort = "^5.10.1"
poethepoet = "^0.11.0"
types-setuptools = "^57.4.4"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"

[tool.poetry.scripts]
init = "py_aoc.initialize:main"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
