[package]
name = "aoc2020"
version = "1.0.0"
edition = "2021"

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.66"
bitvec = "1.0.1"
clap = { version = "4", features = ["color", "derive"]}
colored = "2.0.0"
framework = { path = "../framework" }
hex = "0.4.3"
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.3"
nom-supreme = "0.8.0"
petgraph = "0.6.4"

[dev-dependencies]
criterion = "0.4"
criterion-macro = "0.4"

[features]
criterion = []
