[package]
name = "aoc2020"
version = "1.0.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bitvec = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
framework = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
petgraph = { workspace = true }
