[package]
name = "aoc_2020"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "aoc_2020"
crate-type = ["rlib"]

[dependencies]
aoc_lib = { workspace = true }
common = { workspace = true }
ctor = { workspace = true }
ahash = { workspace = true }
bitvec = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
ndarray = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
petgraph = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }
