[package]
name = "aoc_2021"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
aoc_lib.workspace = true
bitvec.workspace = true
common.workspace = true
ctor.workspace = true
glam.workspace = true
hex.workspace = true
indoc.workspace = true
itertools.workspace = true
miette.workspace = true
ndarray.workspace = true
nom.workspace = true
nom-supreme.workspace = true
petgraph.workspace = true
test-log.workspace = true
tracing.workspace = true
