[package]
name = "aoc2022"
version = "1.0.0"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["color", "derive"]}
colored = "2.0.0"
framework = { path = "../framework" }
itertools = "0.10"
ndarray = "0.15.6"
nom = "7.1.3"
nom-supreme = "0.8.0"

[dev-dependencies]
criterion = "0.4"
criterion-macro = "0.4"

[features]
criterion = []
