[package]
name = "aoc2022"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
ahash = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
framework = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
