[package]
name = "aoc_2022"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
aoc_lib.workspace = true
common.workspace = true
ctor.workspace = true
glam.workspace = true
indoc.workspace = true
itertools.workspace = true
miette.workspace = true
nom.workspace = true
test-log.workspace = true
tracing.workspace = true
ahash.workspace = true
pathfinding.workspace = true
ndarray.workspace = true
colored.workspace = true
