[package]
name = "aoc2023"
version = "1.0.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { workspace = true }
framework = { workspace = true }
glam = { workspace = true }
hex = "0.4.3"
itertools = { workspace = true }
lending-iterator = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
nom_locate = { workspace = true }
pathfinding = { workspace = true }
petgraph = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
rustworkx-core = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
z3 = { workspace = true }
