[package]
name = "aoc_2023"
version = "1.0.0"
edition = "2021"
license = "MIT"

[features]
real-input = []

[[bin]]
name = "aoc_2023"
path = "src/main.rs"

[dependencies]
aoc-runner = { path = "../aoc-runner" }
aoc-runner-macros = { path = "../aoc-runner-macros" }
bitvec = "1.0.1"
glam = { workspace = true }
hex = "0.4.3"
itertools = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
nom_locate = { workspace = true }
pathfinding = { workspace = true }
petgraph = { workspace = true }
rustworkx-core = { workspace = true }
tracing = { workspace = true }
indoc = "2.0"
rstest = "0.18"
