[package]
name = "framework"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aoc_2024 = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
common = {workspace = true }
chrono = { workspace = true }
humantime =  { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
shellexpand = { workspace = true }
shell-words = { workspace = true }
which = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
