[package]
name = "framework"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
aoc_2020 = { workspace = true, optional = true }
aoc_2023 = { workspace = true, optional = true }
aoc_2024 = { workspace = true, optional = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
common = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
shell-words = { workspace = true }
shellexpand = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[features]
default = ["year_2024"]
year_2024 = ["aoc_2024"]
year_2023 = ["aoc_2023"]
year_2022 = []  # Add aoc_2022 when ready  
year_2021 = []  # Add aoc_2021 when ready
year_2020 = ["aoc_2020"]
